# lakehouse

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  lakehouse-prompt.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: chat_history.py  datasource.py  pipeline.py
backend/app/routers/: datasources.py  dbt.py  monitoring.py  nifi.py  pipelines.py  trino.py  vanna.py
backend/app/schemas/: __init__.py  chat.py  datasource.py  pipeline.py
backend/app/services/: __init__.py  dbt_service.py  minio_service.py  nifi_service.py  pipeline_service.py  trino_service.py  vanna_service.py
backend/tests/: test_health.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/mart/: mart.yml  mart_daily_revenue.sql
dbt_project/models/raw/: sources.yml
dbt_project/models/staging/: staging.yml  stg_orders.sql
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useNiFi.ts  usePipeline.ts  useServiceHealth.ts  useTrinoQuery.ts  useVannaChat.ts
infrastructure/hive-metastore/: Dockerfile  entrypoint.sh  metastore-site.xml
infrastructure/minio/: Dockerfile  init-buckets.sh
infrastructure/nifi/: Dockerfile  upload-templates.sh
infrastructure/prometheus/: prometheus.yml
infrastructure/trino/: Dockerfile  health-check.sh
scripts/: health-check.sh  init-iceberg.py  seed-vanna.py
(+35 files in other folders)
