[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-backend"
version = "0.1.0"
description = "Lakehouse Platform Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "trino>=0.320.0",
    "httpx>=0.27.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "python-multipart>=0.0.9",
    "minio>=7.2.0",
    "dbt-core>=1.8.0",
    "dbt-trino>=1.8.0",
    "vanna>=0.5.0,<2.0.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
